objects/Job_Execution__c.object
<CustomObject>
    <description>Purpose of this object is to monitor ESP and Datastage jobs related to SFDC</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Job_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Immediate_Action__c</fullName>
        <inlineHelpText>i.e. Restart the job, force complete, etc.</inlineHelpText>
        <label>Immediate Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Has the name of the Job related</description>
        <label>Job Name</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipName>Job_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solutions__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solution</label>
        <referenceTo>Solution</referenceTo>
        <relationshipLabel>Job Executions</relationshipLabel>
        <relationshipName>Job_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Job Execution</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Job Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>